# poumtchak

./: CMakeLists.txt  Drummer.cpp  Drummer.hpp  ExitButton.qml  ITchikiBoum.hpp  Loop.qml  MainWindow.qml  Mixer.hpp  Pad.qml  Sample.cpp  Sample.hpp  Slider.qml  Sound.qml  TchikiBoum.cpp  TchikiBoum.hpp  main.cpp  main.py  main.qml  resources.qrc  screen.qml  swmixer_demo.py  test.cpp  untitled.pro
resources/: resources.qrc
resources/qml/: ExitButton.qml  main.qml  screen.qml
src/: Mixer.cpp  Sample.cpp  main.cpp
